--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,396 +16,6 @@
 @import "sections/skills/section-skills";
 @import "sections/section-about";
 @import "sections/section-form";
-@import "sections/section-posts";
+@import "sections/posts/section-posts";
 
 @import "footer";
-
-// * {
-//   box-sizing: border-box;
-// }
-
-// html {
-//   letter-spacing: 0.1em;
-//   font-size: 16px;
-//   font-family: "Robota", sans-serif;
-//   color: #637588;
-//   overflow-y: scroll;
-// }
-
-// h1 {
-//   font-family: "Robota", sans-serif;
-//   font-size: 3.75rem;
-//   font-weight: 300;
-//   line-height: 1.2em;
-//   text-align: center;
-//   @media (max-width: 992px) {
-//     & {
-//       font-size: 2.5rem;
-//     }
-//   }
-//   @media (max-width: 768px) {
-//     & {
-//       font-size: 1.875rem;
-//     }
-//   }
- 
-// }
-
-// a {
-//   text-decoration: none;
-//   color: #ffffff;
-// }
-
-// .header {
-//   min-height: 100vh;
-//   background-color: $color-primary;
-//   background-image: url(../img/img-header.png);
-//   background-repeat: no-repeat;
-//   background-size: cover;
-//   background-position: 50% 50%;
-//   position: relative;
-
-  // .header-overlay {
-  //   background-color: $color-primary;
-  //   opacity: 0.8;
-  //   top: 0;
-  //   left: 0;
-  //   bottom: 0;
-  //   right: 0;
-  //   position: absolute;
-  //   z-index: 1;
-  // }
-
-//   .header-menu {
-//     position: relative;
-//     z-index: 2;
-//     width: 100%;
-//     .header-menu__container {
-//       padding-top: 20px;
-//       max-width: 1340px;
-//       margin: auto;
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-
-//       .header-logo {
-//         letter-spacing: 0.22em;
-//         font-size: 1.5rem;
-//         margin-left: 20px;
-//         font-weight: 400;
-       
-//         .header-logo__link {
-//           font-family: "Roboto", sans-serif;
-
-//           .header-logo__accent {
-//             display: inline-block;
-//             margin-right: 4px;
-//             padding: 14px 1px 13px 5px;
-//             border: 3px solid #d53d27;
-//           }
-//         }
-//       }
-//     }
-//   }
-//   .header-navbar {
-//     .header-navbar__list {
-//       display: flex;
-//       position: right;
-//       letter-spacing: 0.1em;
-
-//       .header-navbar__item {
-//         list-style-type: none;
-//         font-size: 1.125rem;
-//         margin: 0 20px;
-//         .header-navbar__link {
-//           font-family: "Roboto", sans-serif;
-//           font-stretch: ultra-expanded;
-//           transition: color 0.5s;
-//           &:hover {
-//             color:$color-accent;
-//           }
-//         }
-//       }
-//     }
-//   }
-
-
-// .header-content {
-//   position: absolute;
-//   top: 50%;
-//   transform: translateY(-50%);
-//   z-index: 2;
-//   width: 100%;
-//   .header-content__container {
-//     max-width: 1340px;
-//     margin: auto;
-//     position: relative;
-//     display: flex;
-//     flex-flow: column;
-//     align-items: center;
-//     .header-content__title {
-//       z-index: 2;
-//       position: relative;
-//       color: #ffffff;
-//       margin: auto auto 53px auto;
-//       font-family: "Roboto Slab";
-//       letter-spacing: 0.08em;
-//       font-weight: 300;
-//       line-height: 1.2em;
-
-//       @media (max-width: 992px) {
-//         & {
-//           margin: 1px auto 43px auto;
-//         }
-//       }
-//       @media (max-width: 768px) {
-//         & {
-//           margin: 1px 0 33px 0;
-//         }
-//       }
-//     }
-//   }
-//   .header-content__buttons {
-//     display: flex;
-//     justify-content: center;
- 
-
-//     .header-content__btn {
-//       position: relative;
-//       height: 60px;
-//       z-index: 2;
-//       border: 2px solid #ffffff;
-//       font-stretch: condensed;
-//       margin: 0 10px -1px ;
-//       padding: 18px 0;
-//       min-width: 250px;
-//       font-size: 1.125rem;
-//       font-family: "Roboto";
-//       letter-spacing: 0.1em;
-//       text-align: center;
-//       background-color: rgba(255, 255, 255, 0.1);
-//       transition: background-color 0.5s;
-
-//       &:hover {
-//         background-color: #d66926;
-//       }
-
-//       @media (max-width: 992px) {
-//         & {
-//           margin: 0 10px;
-//           min-width: 200px;
-//           height: 50px;
-//           padding-top: 14px;
-//           padding-bottom: 14px;
-//           letter-spacing: 0.1em;
-//           font-size: 1rem;
-//         }
-//       }
-//       @media (max-width: 768px) {
-//         & {
-//           margin: 0 10px;
-//           min-width: 170px;
-//           height: 40px;
-//           padding-top: 10px;
-//           padding-bottom: 10px;
-//           letter-spacing: 0.05em;
-//           font-size: 1rem;
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .skills {
-//   padding: 10px;
-
-//   .skills__container {
-//     display: grid;
-//     grid-gap: 10px;
-//     grid-template-areas:
-//       "a1 a1 a2 a3"
-//       "a4 a5 a5 a6"
-//       "a7 a8 a9 a6";
-//     grid-auto-rows: calc(33.333vh - 13.333px);
-//     margin-bottom: 10px;
-
-//     @media (max-width: 992px) {
-//       & {
-//         grid-template-areas:
-//           "a1 a1 a2 "
-//           "a3 a4 a4 "
-//           "a5 a5 a6"
-//           "a7 a8 a6"
-//           "a7 a9 a9";
-//       }
-//       @media (max-width: 768px) {
-//         & {
-//           grid-gap: 10px;
-//           grid-template-areas:
-//             "a1 a2"
-//             "a3 a2"
-//             "a4 a4"
-//             "a5 a6"
-//             "a5 a7"
-//             "a8 a9";
-//           grid-template-columns: 1fr 1fr;
-//         }
-//       }
-//     }
-
-//     .skill-item {
-//       background-color: $color-primary;
-//       position: relative;
-//       overflow: hidden;
-
-//       .skill-item__overlay {
-//         position: absolute;
-//         z-index: 1;
-//         top: 0;
-//         bottom: 0;
-//         right: 0;
-//         left: 0;
-//         background-color: $color-primary;
-//         opacity: 0.8;
-//         transition: opacity 0.5s;
-//       }
-
-//       .skill-item__image {
-//         position: absolute;
-//         top: 0;
-//         bottom: 0;
-//         right: 0;
-//         left: 0;
-//         background-position: center;
-//         background-size: cover;
-//         background-repeat: no-repeat;
-//         transition: transform 0.5s;
-        
-//       }
-//       .skill-item__title {
-//         position: absolute;
-//         z-index: 2;
-//         top: 0;
-//         bottom: 0;
-//         right: 0;
-//         left: 0;
-//         margin: 0;
-//         font-size: 1.25rem;
-//         letter-spacing: 0.05em;
-//         font-weight: 600;
-//       }
-
-//       .skill-item__link {
-//         position: absolute;
-//         height: 100%;
-//         top: 0;
-//         right: 0;
-//         bottom: 0;
-//         left: 0;
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         letter-spacing: 0.1em;
-//         transition: color 0.5s;
-//         font-family: "Roboto", sans-serif;
-//       }
-
-//       &:hover .skill-item__image {
-//         transform: scale(1.1);
-//       }
-//     }
-//   }
-//   .skills__button {
-//     display: flex;
-//     justify-content: center;
-//     margin-top: 20px;
-//     margin-bottom: 30px;
-//     .btn-accent {
-//       min-width: 350px;
-//       height: 60px;
-//       border: 2px solid$color-primary;
-//       font-size: 1.125rem;
-//       font-family: "Roboto";
-//       letter-spacing: 0.1em;
-//       text-align: center;
-//       background-color: rgba(45, 54, 81, 0.8);
-//       padding: 16px 20px;
-//       transition: background-color 0.5s;
-
-//       &:hover {
-//         background-color: #d66926;
-//       }
-//     }
-//   }
-
-//   .skill-item:nth-of-type(1) {
-//     grid-area: a1;
-//     .skill-item__image {
-//       background-image: url(../img/img-html.png);
-//     }
-//   }
-//   .skill-item:nth-of-type(2) {
-//     grid-area: a2;
-//     .skill-item__image {
-//       background-image: url(../img/img-css.png);
-//     }
-//   }
-
-//   .skill-item:nth-of-type(3) {
-//     grid-area: a3;
-//     .skill-item__image {
-//       background-image: url(../img/img-markup.png);
-//     }
-//   }
-//   .skill-item:nth-of-type(4) {
-//     grid-area: a4;
-//     .skill-item__image {
-//       background-image: url(../img/img-webdesign.png);
-//     }
-//   }
-
-//   .skill-item:nth-of-type(5) {
-//     grid-area: a5;
-//     .skill-item__image {
-//       background-image: url(../img/img-qa.png);
-//     }
-//   }
-//   .skill-item:nth-of-type(6) {
-//     grid-area: a6;
-//     .skill-item__image {
-//       background-image: url(../img/img-codding.png);
-//     }
-//   }
-//   .skill-item:nth-of-type(7) {
-//     grid-area: a7;
-//     .skill-item__image {
-//       background-image: url(../img/img-adaptability.png);
-//     }
-//   }
-//   .skill-item:nth-of-type(8) {
-//     grid-area: a8;
-//     .skill-item__image {
-//       background-image: url(../img/img-php.png);
-//     }
-//   }
-
-//   .skill-item:nth-of-type(9) {
-//     grid-area: a9;
-//     .skill-item__image {
-//       background-image: url(../img/img-seo.png);
-//     }
-//   }
-
-//     .skill-item:hover .skill-item__overlay {
-//     opacity: 0.95 !important;
-//   }
-
-//   .skill-item:hover .skill-item__link {
-//     color:$color-accent;
-//   }
-// }
-// @media (max-height: 640px) {
-  //   .skills__container {
-  //     grid-auto-rows: 200px;
-  //   }
-  // }
