--- a/assets/scss/sections/posts/_posts-button.scss
+++ b/assets/scss/sections/posts/_posts-button.scss
@@ -12,6 +12,7 @@
       background-color: rgba(45, 54, 81, 0.8);
       padding: 17px 19px;
       transition: background-color 0.5s;
+      padding-top: 18px;
       
       &:focus,
       &:hover {
