--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -917,6 +917,8 @@ a {
 .form__container {
   padding-right: 20px;
   padding-left: 20px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .form__container .form-item {
@@ -926,9 +928,8 @@ a {
 }
 
 .form__container .form-item .form-item-input {
-  display: block;
   color: #ffffff;
-  width: 420px;
+  width: 100%;
   height: 60px;
   padding: 2px 30px 0 30px;
   -webkit-transition: background-color 0.5s, border-color 0.5s;
@@ -950,7 +951,7 @@ a {
 }
 
 .form__container .form-item .btn-accent {
-  width: 420px;
+  width: 100%;
   height: 60px;
   color: #ffffff;
   border-color: rgba(255, 255, 255, 0);
@@ -971,7 +972,7 @@ a {
 }
 
 .posts {
-  padding: 10px 10px 40px;
+  padding: 100px 0;
 }
 
 .posts .posts__container {
@@ -1001,23 +1002,56 @@ a {
   padding-bottom: 20px;
   grid-gap: 20px;
   grid-template-areas: "p1 p1 p2 p3" "p4 p5 p6 p6";
-  grid-template-columns: repeat(4, 310px);
+  grid-template-columns: repeat(4, 1fr);
 }
 
-.posts .posts__container .post-item {
+.posts .post-item {
   display: block;
+  -webkit-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  transition: background-color 0.5s;
 }
 
-.posts .posts__container .post-item__link {
+.posts .post-item:hover .post-item__image {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+  cursor: pointer;
+}
+
+.posts .post-item:hover .post-item__link {
+  background-color: #d8d8d8;
+  cursor: pointer;
+}
+
+.posts .post-item__link {
   display: grid;
   overflow: hidden;
   height: 100%;
   grid-template-rows: 300px 1fr;
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: #f2f2f2;
+  -webkit-transition: background-color 0.5s;
+  -o-transition: background-color 0.5s;
+  transition: background-color 0.5s;
 }
 
-.posts .posts__container .post-item__caption {
+.posts .post-item .post-item__image {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.posts .post-item__image img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 300px;
+}
+
+.posts .post-item__caption {
   display: grid;
   align-self: center;
   -webkit-transition: color 0.5s;
@@ -1028,23 +1062,47 @@ a {
   padding: 20px;
 }
 
-.posts .posts__container .post-item__caption h3 {
+.posts .post-item__caption h3 {
   letter-spacing: 0.05em;
   color: #637588;
   font-size: 1.125rem;
   margin: 18px 0;
 }
 
-.posts .posts__container .post-item__caption p {
+.posts .post-item__caption p {
   font-family: "Roboto", serif;
   -webkit-transition: color 0.5s;
   -o-transition: color 0.5s;
   transition: color 0.5s;
-  letter-spacing: 0.01rem;
+  letter-spacing: 0;
   text-align: center;
   color: #637588;
   font-size: 1rem;
   line-height: 1.15;
+}
+
+.posts .post-item:nth-of-type(1) {
+  grid-area: p1;
+}
+
+.posts .post-item:nth-of-type(2) {
+  grid-area: p2;
+}
+
+.posts .post-item:nth-of-type(3) {
+  grid-area: p3;
+}
+
+.posts .post-item:nth-of-type(4) {
+  grid-area: p4;
+}
+
+.posts .post-item:nth-of-type(5) {
+  grid-area: p5;
+}
+
+.posts .post-item:nth-of-type(6) {
+  grid-area: p6;
 }
 
 .posts .posts__button {
@@ -1069,34 +1127,87 @@ a {
   -webkit-transition: background-color 0.5s;
   -o-transition: background-color 0.5s;
   transition: background-color 0.5s;
+  padding-top: 18px;
 }
 
 .posts .posts__button .btn-accent:focus, .posts .posts__button .btn-accent:hover {
   background-color: #d66926;
 }
 
-.post-item:nth-of-type(1) {
-  grid-area: p1;
+.footer {
+  padding: 50px 20px 50px;
+  text-align: center;
+  background-color: #2d3651;
+  text-align: center;
 }
 
-.post-item:nth-of-type(2) {
-  grid-area: p2;
+.footer__container {
+  max-width: 1340px;
+  margin: auto;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
-.post-item:nth-of-type(3) {
-  grid-area: p3;
+.footer__social {
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(50px, -webkit-max-content));
+  grid-template-columns: repeat(auto-fit, minmax(50px, max-content));
 }
 
-.post-item:nth-of-type(4) {
-  grid-area: p4;
+.footer__social .fab {
+  font-size: 36px;
+  padding: 10px 6px;
+  -webkit-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
-.post-item:nth-of-type(5) {
-  grid-area: p5;
+.footer__social .fab:hover {
+  color: #d66926;
 }
 
-.post-item:nth-of-type(6) {
-  grid-area: p6;
+.footer__copy {
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+  color: #637588;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.05em;
+  color: #e5e5e5;
+  font-weight: 700;
+}
+
+.footer__copy::before {
+  position: absolute;
+  bottom: -20px;
+  left: calc(50% - 75px / 2);
+  width: 75px;
+  height: 2px;
+  content: "";
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-bottom: 75px;
+}
+
+.footer__copy span {
+  margin-right: -0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  clear: both;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  letter-spacing: 0.33em;
+  font-weight: 100;
+  color: #637588;
 }
 
 @media (max-width: 992px) {
@@ -1117,6 +1228,9 @@ a {
   }
   .skills .skills__container {
     grid-template-areas: "a1 a1 a2 " "a3 a4 a4 " "a5 a5 a6" "a7 a8 a6" "a7 a9 a9";
+  }
+  .skills .skills__container .skill-item__link {
+    font-size: 1.125rem;
   }
   .about {
     padding: 80px 0 64px 0;
@@ -1142,14 +1256,19 @@ a {
   .about .about__image img {
     margin-left: 42px;
   }
-  .form__container .form-item .form-item-input {
-    width: 303.5px;
-    margin: 0 20px 1px 0;
-    padding: 0 30px 1px 30px;
+  .form {
+    padding: 30px 0 10px;
   }
-  .form__container .form-item .btn-accent {
-    width: 303.5px;
-    padding: 0 0 0 2px;
+  .posts .posts__container h2 {
+    font-size: 2rem;
+    margin-bottom: 42px;
+  }
+  .posts .posts__container .posts__grid {
+    grid-template-areas: "p1 p1 p2" "p3 p4 p4" "p5 p5 p6";
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .posts {
+    padding: 80px 0;
   }
 }
 
@@ -1177,26 +1296,56 @@ a {
     letter-spacing: 0.05em;
     font-size: 1rem;
   }
+  .skills .skills__container .skill-item__link {
+    font-size: 1.125rem;
+  }
   .about {
-    padding: 60px 0 60px 0;
+    padding: 60px 0 45px 0;
   }
   .about .about__container .about__content {
-    width: 477px;
+    width: 470px;
     margin: 0;
     padding-top: 0;
     padding-bottom: 0;
   }
   .about .about__container .about__content h2 {
-    margin-bottom: 32px;
+    margin-bottom: 31px;
     font-size: 1.5rem;
   }
   .about .about__container .about__content p {
     margin: 10px 0 16px 0;
   }
   .about .about__container .about__content p:first-of-type::after {
-    right: -10px;
+    right: -11px;
   }
   .about .about__image img {
-    margin-left: 20px;
+    width: 236px;
+    height: 425px;
+    margin-left: 21px;
+    margin-top: 70px;
+  }
+  .form__container .form-item {
+    width: calc((100% - 20px) / 2);
+  }
+  .form__container .form-item:first-child {
+    width: 100%;
+  }
+  .form__container .form-item .form-item-input {
+    margin: 0 0 20px 0;
+    padding: 0 30px 1px 30px;
+  }
+  .form__container .form-item .btn-accent {
+    margin: 0 0 0 20px;
+  }
+  .posts .posts__container h2 {
+    font-size: 1.5rem;
+    margin-bottom: 36px;
+  }
+  .posts .posts__container .posts__grid {
+    grid-template-areas: "p1 p2" "p3 p4" "p5 p6";
+    grid-template-columns: 1fr 1fr;
+  }
+  .posts {
+    padding: 60px 0;
   }
 }
