--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -7,7 +7,7 @@
     padding: 80px 0 64px 0;
   }
   @media (max-width: 768px) {
-    padding: 60px 0 60px 0;
+    padding: 60px 0 45px 0;
   }
 
   .about__container {
@@ -24,7 +24,7 @@
         padding-bottom: 0;
       }
       @media (max-width: 768px) {
-        width: 477px;
+        width: 470px;
         margin: 0;
         padding-top: 0;
         padding-bottom: 0;
@@ -42,7 +42,7 @@
           font-size: 2rem;
         }
         @media (max-width: 768px) {
-          margin-bottom: 32px;
+          margin-bottom: 31px;
           font-size: 1.5rem;
         }
 
@@ -78,7 +78,7 @@
             right: -20px;
           }
           @media (max-width: 768px) {
-            right: -10px;
+            right: -11px;
           }
         }
       }
@@ -99,8 +99,10 @@
         margin-left: 42px;
       }
       @media (max-width: 768px) {
-        
-        margin-left: 20px;
+        width: 236px;
+        height: 425px;
+        margin-left: 21px;
+        margin-top: 70px;
       }
     }
   }
