--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -1,18 +1,35 @@
 .form {
   padding: 30px 0;
   background-color: $color-primary;
+  @media (max-width: 992px) {
+    padding: 30px 0 10px;
+  }
   &__container {
     @extend %container;
     padding-right: 20px;
     padding-left: 20px;
+    flex-wrap: wrap;
 
     .form-item {
       display: flex;
-       
+      //width: calc(100%/3);
+
+      @media (max-width: 992px) {
+        // width: 303.5px;
+        // margin: 0 20px 0 0;
+        // padding: 0 30px 1px 30px;
+      }
+
+      @media (max-width: 768px) {
+        width: calc((100% - 20px) / 2);
+        &:first-child {
+          width: 100%;
+        }
+      }
+
       .form-item-input {
-        display: block;
-        color:$color-light;
-        width: 420px;
+        color: $color-light;
+        width: 100%;
         height: 60px;
         padding: 2px 30px 0 30px;
         transition: background-color 0.5s, border-color 0.5s;
@@ -22,10 +39,8 @@
         background-color: rgba(255, 255, 255, 0.05);
         font-size: 1.125rem;
         margin-right: 20px;
-
-        @media (max-width: 992px) {
-          width: 303.5px;
-          margin: 0 20px 1px 0;
+        @media (max-width: 768px) {
+          margin: 0 0 20px 0;
           padding: 0 30px 1px 30px;
         }
 
@@ -35,15 +50,12 @@
           border-bottom-color: $color-light;
           background-color: rgba($color-light, 0.15);
           outline: none;
-
-          
-      
         }
       }
       .btn-accent {
-        width: 420px;
+        width: 100%;
         height: 60px;
-        color:$color-light;
+        color: $color-light;
         border-color: rgba($color-light, 0);
         border-bottom-color: rgba($color-light, 0.4);
         background-color: rgba($color-light, 0.1);
@@ -52,15 +64,20 @@
         font-family: "Robota", sans-serif;
         transition: background-color 0.5s, border-color 0.5s;
 
-        @media (max-width: 992px) {
-          width: 303.5px;
-          padding: 0 0 0 2px;
+        // @media (max-width: 992px) {
+        //   width: 303.5px;
+        //   padding: 0 0 0 2px;
+        // }
+
+        @media (max-width: 768px) {
+          margin: 0 0 0 20px;
+         
         }
 
         &:hover {
-            background-color:$color-accent;
-            border-color: $color-light;
-            cursor: pointer;
+          background-color: $color-accent;
+          border-color: $color-light;
+          cursor: pointer;
         }
       }
     }
