--- a/assets/scss/sections/posts/_posts-container.scss
+++ b/assets/scss/sections/posts/_posts-container.scss
@@ -1,68 +1,148 @@
-    .posts__container {
-      @extend %container;
-      flex-flow: column;
-      padding-right: 20px;
-      padding-left: 20px;
-      h2 {
-        max-height: 48px;
-        width: 100%;
-        margin: 0;
-        letter-spacing: 0.1em;
-        color: #2d3651;
-        font-family: "Roboto Slab", serif;
-        line-height: 1.2em;
-        font-size: 2.5rem;
-        margin-bottom: 56px;
-      }
+.posts__container {
+  @extend %container;
+  flex-flow: column;
+  padding-right: 20px;
+  padding-left: 20px;
   
-      .posts__grid {
-        position: relative;
-        display: grid;
-        padding-bottom: 20px;
-        grid-gap: 20px;
-        grid-template-areas:
-          "p1 p1 p2 p3"
-          "p4 p5 p6 p6";
-        grid-template-columns: repeat(4, 310px);
-      }
-  
-      .post-item {
-        display: block;
-        &__link {
-          display: grid;
-          overflow: hidden;
-          height: 100%;
-          grid-template-rows: 300px 1fr;
-          text-decoration: none;
-          background-color: #eeeeee;
-        }
-  
-        &__caption {
-          display: grid;
-          align-self: center;
-          transition: color 0.5s;
-          text-align: center;
-          font-family: "Roboto Slab", serif;
-          padding: 20px;
-        
-  
-          h3 {
-            letter-spacing: 0.05em;
-            color: #637588;
-            font-size: 1.125rem;
-            margin: 18px 0;
-          }
-          p {
-            font-family: "Roboto", serif;
-            transition: color 0.5s;
-            letter-spacing: 0.01rem;
-            text-align: center;
-            color: #637588;
-            font-size: 1rem;
-            line-height: 1.15;
-          }
-        }
-      }
+  h2 {
+    max-height: 48px;
+    width: 100%;
+    margin: 0;
+    letter-spacing: 0.1em;
+    color: #2d3651;
+    font-family: "Roboto Slab", serif;
+    line-height: 1.2em;
+    font-size: 2.5rem;
+    margin-bottom: 56px;
+
+    @media (max-width: 992px) {
+      font-size: 2rem;
+      margin-bottom: 42px;
     }
+    @media (max-width: 768px) {
+      font-size: 1.5rem;
+      margin-bottom: 36px;
+    }
+  }
+
+  .posts__grid {
+    position: relative;
+    display: grid;
+    padding-bottom: 20px;
+    grid-gap: 20px;
+    grid-template-areas:
+      "p1 p1 p2 p3"
+      "p4 p5 p6 p6";
+    grid-template-columns: repeat(4, 1fr);
+    @media (max-width: 992px) {
+      grid-template-areas:
+        "p1 p1 p2"
+        "p3 p4 p4"
+        "p5 p5 p6";
+      grid-template-columns: repeat(3, 1fr); 
+    }
+
+    @media (max-width: 768px) {
+      grid-template-areas:
+        "p1 p2"
+        "p3 p4"
+        "p5 p6";
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+.post-item {
+  display: block;
+  transition: background-color 0.5s;
   
-  
+  &:hover .post-item__image {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+  &:hover .post-item__link {
+    background-color: #d8d8d8;
+    cursor: pointer;
+  }
+  &__link {
+    display: grid;
+    overflow: hidden;
+    height: 100%;
+    grid-template-rows: 300px 1fr;
+    text-decoration: none;
+    background-color:#f2f2f2;
+    transition: background-color 0.5s;
+    
+  }
+  .post-item__image {
+    transition: transform 0.5s;
+  }
+  &__image img {
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+ 
+    
+  }
+  &__caption {
+    display: grid;
+    align-self: center;
+    transition: color 0.5s;
+    text-align: center;
+    font-family: "Roboto Slab", serif;
+    padding: 20px;
+
+    h3 {
+      letter-spacing: 0.05em;
+      color: #637588;
+      font-size: 1.125rem;
+      margin: 18px 0;
+    }
+    p {
+      font-family: "Roboto", serif;
+      transition: color 0.5s;
+      letter-spacing: 0;
+      text-align: center;
+      color: #637588;
+      font-size: 1rem;
+      line-height: 1.15;
+    }
+  }
+}
+
+.post-item:nth-of-type(1) {
+  grid-area: p1;
+}
+.post-item:nth-of-type(2) {
+  grid-area: p2;
+}
+.post-item:nth-of-type(3) {
+  grid-area: p3;
+}
+.post-item:nth-of-type(4) {
+  grid-area: p4;
+}
+.post-item:nth-of-type(5) {
+  grid-area: p5;
+}
+.post-item:nth-of-type(6) {
+  grid-area: p6;
+}
+
+// .post-item:nth-of-type(2) {
+//   grid-area: p2;
+// }
+
+// .post-item:nth-of-type(3) {
+//   grid-area: p3;
+// }
+// .post-item:nth-of-type(4) {
+//   grid-area: p4;
+// }
+
+// .post-item:nth-of-type(5) {
+//   grid-area: p5;
+// }
+// .post-item:nth-of-type(6) {
+//   grid-area: p6;
+// }
