--- a/assets/scss/sections/posts/_section-posts.scss
+++ b/assets/scss/sections/posts/_section-posts.scss
@@ -1,28 +1,15 @@
 .posts {
-  padding: 10px 10px 40px;
+  padding: 100px 0;
   @import "sections/posts/posts-container";
   @import "sections/posts/posts-button";
+
+  @media (max-width: 992px) {
+    padding: 80px 0;
+  }
+  @media (max-width: 768px) {
+    padding: 60px 0;
+  }
 }
 
 
 
-.post-item:nth-of-type(1) {
-  grid-area: p1;
-}
-.post-item:nth-of-type(2) {
-  grid-area: p2;
-}
-
-.post-item:nth-of-type(3) {
-  grid-area: p3;
-}
-.post-item:nth-of-type(4) {
-  grid-area: p4;
-}
-
-.post-item:nth-of-type(5) {
-  grid-area: p5;
-}
-.post-item:nth-of-type(6) {
-  grid-area: p6;
-}
