--- a/assets/scss/sections/skills/_skills-container.scss
+++ b/assets/scss/sections/skills/_skills-container.scss
@@ -78,6 +78,13 @@
       letter-spacing: 0.1em;
       transition: color 0.5s;
       font-family: "Roboto", sans-serif;
+
+      @media (max-width: 992px) {
+        font-size: 1.125rem
+      }
+      @media (max-width: 768px) {
+        font-size: 1.125rem
+      }
     }
 
     &:hover .skill-item__image {
