--- a/assets/scss/header/_header-logo.scss
+++ b/assets/scss/header/_header-logo.scss
@@ -3,6 +3,12 @@
     font-size: 1.5rem;
     margin-left: 20px;
     font-weight: 400;
+
+    @media (max-width: 768px) {
+      & {
+        margin: 0 0 20px 20px;
+      }
+    }
    
     &__link {
       font-family: "Roboto", sans-serif;
