--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,6 +552,101 @@ a {
   border: 3px solid #d53d27;
 }
 
+.header-navbar__btn {
+  width: 30px;
+  height: 22.5px;
+  position: relative;
+  margin: 0 20px 20px 20px;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.header-navbar__btn-row {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 50%;
+  background: #ffffff;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+      -ms-transform: rotate(0deg);
+          transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+.header-navbar__btn-row:nth-child(even) {
+  left: 50%;
+  border-radius: 0 3px 3px 0;
+}
+
+.header-navbar__btn-row:nth-child(odd) {
+  left: 0px;
+  border-radius: 3px 0 0 3px;
+}
+
+.header-navbar__btn-row:nth-child(1), .header-navbar__btn-row:nth-child(2) {
+  top: 0px;
+}
+
+.header-navbar__btn-row:nth-child(3), .header-navbar__btn-row:nth-child(4) {
+  top: 9px;
+}
+
+.header-navbar__btn-row:nth-child(5), .header-navbar__btn-row:nth-child(6) {
+  top: 18px;
+}
+
+.header-navbar__btn.open span:nth-child(1),
+.header-navbar__btn.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.header-navbar__btn.open span:nth-child(2),
+.header-navbar__btn.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.header-navbar__btn.open span:nth-child(1) {
+  left: 2.5px;
+  top: 3.5px;
+}
+
+.header-navbar__btn.open span:nth-child(2) {
+  left: calc(50% - 2.5px);
+  top: 3.5px;
+}
+
+.header-navbar__btn.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+.header-navbar__btn.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+.header-navbar__btn.open span:nth-child(5) {
+  left: 2.5px;
+  top: 14.5px;
+}
+
+.header-navbar__btn.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 14.5px;
+}
+
 .header-navbar__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -925,6 +1020,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: calc(100%/3);
 }
 
 .form__container .form-item .form-item-input {
@@ -1160,7 +1256,7 @@ a {
 
 .footer__social .fab {
   font-size: 36px;
-  padding: 10px 6px;
+  padding: 10px 5.5px 10px 7px;
   -webkit-transition: color 0.5s;
   -o-transition: color 0.5s;
   transition: color 0.5s;
@@ -1191,7 +1287,7 @@ a {
   height: 2px;
   content: "";
   background-color: rgba(255, 255, 255, 0.1);
-  margin-bottom: 75px;
+  margin-bottom: 76px;
 }
 
 .footer__copy span {
@@ -1207,7 +1303,13 @@ a {
       align-content: center;
   letter-spacing: 0.33em;
   font-weight: 100;
-  color: #637588;
+  color: rgba(99, 117, 136, 0.7);
+}
+
+@media (min-width: 768px) {
+  .header-navbar__btn {
+    display: none;
+  }
 }
 
 @media (max-width: 992px) {
@@ -1230,7 +1332,7 @@ a {
     grid-template-areas: "a1 a1 a2 " "a3 a4 a4 " "a5 a5 a6" "a7 a8 a6" "a7 a9 a9";
   }
   .skills .skills__container .skill-item__link {
-    font-size: 1.125rem;
+    font-size: 1.25rem;
   }
   .about {
     padding: 80px 0 64px 0;
@@ -1257,7 +1359,15 @@ a {
     margin-left: 42px;
   }
   .form {
-    padding: 30px 0 10px;
+    padding: 30px 0 30px;
+  }
+  .form__container .form-item .form-item-input {
+    margin: 0 20px 0 0;
+    padding: 0 30px 1px 30px;
+  }
+  .form__container .form-item .btn-accent {
+    width: 303.5px;
+    padding: 0 0 0 2px;
   }
   .posts .posts__container h2 {
     font-size: 2rem;
@@ -1280,9 +1390,18 @@ a {
   }
 }
 
+@media (max-width: 769px) {
+  .header-navbar__list {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 1.875rem;
+  }
+  .header-logo {
+    margin: 0 0 20px 20px;
   }
   .header-content__container .header-content__title {
     margin: 1px 0 33px 0;
@@ -1324,6 +1443,9 @@ a {
     margin-left: 21px;
     margin-top: 70px;
   }
+  .form {
+    padding: 30px 0 10px;
+  }
   .form__container .form-item {
     width: calc((100% - 20px) / 2);
   }
@@ -1335,6 +1457,7 @@ a {
     padding: 0 30px 1px 30px;
   }
   .form__container .form-item .btn-accent {
+    width: 100%;
     margin: 0 0 0 20px;
   }
   .posts .posts__container h2 {
