--- a/assets/scss/header/_header-navbar.scss
+++ b/assets/scss/header/_header-navbar.scss
@@ -1,21 +1,119 @@
 .header-navbar {
-    &__list {
-      display: flex;
-      position: right;
-      letter-spacing: 0.1em;
+  
+  &__btn {
+    width: 30px;
+    height: 22.5px;
+    position: relative;
+    margin: 0 20px 20px 20px;
+    transform: rotate(0deg);
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
 
-      .header-navbar__item {
-        list-style-type: none;
-        font-size: 1.125rem;
-        margin: 0 20px;
-        .header-navbar__link {
-          font-family: "Roboto", sans-serif;
-          font-stretch: ultra-expanded;
-          transition: color 0.5s;
-          &:hover {
-            color: $color-accent;
-          }
+    @media (min-width: 768px) {
+      display: none;
+    }
+    &-row {
+      display: block;
+      position: absolute;
+      height: 3px;
+      width: 50%;
+      background: $color-light;
+      opacity: 1;
+      transform: rotate(0deg);
+      transition: 0.25s ease-in-out;
+      &:nth-child(even) {
+        left: 50%;
+        border-radius: 0 3px 3px 0;
+      }
+      &:nth-child(odd) {
+        left: 0px;
+        border-radius: 3px 0 0 3px;
+      }
+      
+      &:nth-child(1),
+      &:nth-child(2) {
+        top: 0px;
+      }
+      
+      &:nth-child(3),
+      &:nth-child(4) {
+        top: 9px;
+      }
+      
+      &:nth-child(5),
+      &:nth-child(6) {
+        top: 18px;
+      }
+     
+
+    }
+    &.open span:nth-child(1),
+    &.open span:nth-child(6) {
+      transform: rotate(45deg);
+    }
+    
+    &.open span:nth-child(2),
+    &.open span:nth-child(5) {
+      transform: rotate(-45deg);
+    }
+    
+    &.open span:nth-child(1) {
+      left: 2.5px;
+      top: 3.5px;
+    }
+    
+    &.open span:nth-child(2) {
+      left: calc(50% - 2.5px);
+      top: 3.5px;
+    }
+    
+    &.open span:nth-child(3) {
+      left: -50%;
+      opacity: 0;
+    }
+    
+    &.open span:nth-child(4) {
+      left: 100%;
+      opacity: 0;
+    }
+    
+    &.open span:nth-child(5) {
+      left: 2.5px;
+      top: 14.5px;
+    }
+    
+    &.open span:nth-child(6) {
+      left: calc(50% - 5px);
+      top: 14.5px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    position: right;
+    letter-spacing: 0.1em;
+
+    @media (max-width: 769px) {
+      display: none;
+    }
+
+    .header-navbar__item {
+      list-style-type: none;
+      font-size: 1.125rem;
+      margin: 0 20px;
+      .header-navbar__link {
+        font-family: "Roboto", sans-serif;
+        font-stretch: ultra-expanded;
+        transition: color 0.5s;
+        &:hover {
+          color: $color-accent;
         }
       }
     }
   }
+}
+
+
+
+
+
