--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -2,6 +2,10 @@
   padding: 30px 0;
   background-color: $color-primary;
   @media (max-width: 992px) {
+    padding: 30px 0 30px;
+  }
+
+  @media (max-width: 768px) {
     padding: 30px 0 10px;
   }
   &__container {
@@ -12,11 +16,10 @@
 
     .form-item {
       display: flex;
-      //width: calc(100%/3);
+      width: calc(100%/3);
 
       @media (max-width: 992px) {
-        // width: 303.5px;
-        // margin: 0 20px 0 0;
+        
         // padding: 0 30px 1px 30px;
       }
 
@@ -39,6 +42,10 @@
         background-color: rgba(255, 255, 255, 0.05);
         font-size: 1.125rem;
         margin-right: 20px;
+        @media (max-width: 992px) {
+          margin: 0 20px 0 0;
+          padding: 0 30px 1px 30px;
+        }
         @media (max-width: 768px) {
           margin: 0 0 20px 0;
           padding: 0 30px 1px 30px;
@@ -64,12 +71,13 @@
         font-family: "Robota", sans-serif;
         transition: background-color 0.5s, border-color 0.5s;
 
-        // @media (max-width: 992px) {
-        //   width: 303.5px;
-        //   padding: 0 0 0 2px;
-        // }
+        @media (max-width: 992px) {
+          width: 303.5px;
+          padding: 0 0 0 2px;
+        }
 
         @media (max-width: 768px) {
+          width: 100%;
           margin: 0 0 0 20px;
          
         }
