--- a/assets/scss/sections/_section-about.scss
+++ b/assets/scss/sections/_section-about.scss
@@ -3,12 +3,12 @@
   background-color: $color-gray-light;
   padding-top: 100px;
   padding-bottom: 82px;
-  @media (max-width: 992px) {
-    padding: 80px 0 64px 0;
-  }
-  @media (max-width: 768px) {
-    padding: 60px 0 45px 0;
-  }
+  // @media (max-width: 992px) {
+  //   padding: 80px 0 64px 0;
+  // }
+  // @media (max-width: 768px) {
+  //   padding: 60px 0 44px 0;
+  // }
 
   .about__container {
     @extend %container;
@@ -17,18 +17,18 @@
     .about__content {
       display: block;
       width: 924px;
-      @media (max-width: 992px) {
-        width: 640px;
-        margin: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-      }
-      @media (max-width: 768px) {
-        width: 470px;
-        margin: 0;
-        padding-top: 0;
-        padding-bottom: 0;
-      }
+      // @media (max-width: 992px) {
+      //   width: 640px;
+      //   margin: 0;
+      //   padding-top: 0;
+      //   padding-bottom: 0;
+      // }
+      // @media (max-width: 768px) {
+      //   width: 470px;
+      //   margin: 0;
+      //   padding-top: 0;
+      //   padding-bottom: 0;
+      // }
 
       h2 {
         font-size: 2.5rem;
@@ -37,14 +37,14 @@
         font-family: "Roboto Slab", serif;
         line-height: 1.2em;
         margin: 0 0 51px 0;
-        @media (max-width: 992px) {
-          margin-bottom: 37px;
-          font-size: 2rem;
-        }
-        @media (max-width: 768px) {
-          margin-bottom: 31px;
-          font-size: 1.5rem;
-        }
+        // @media (max-width: 992px) {
+        //   margin-bottom: 37px;
+        //   font-size: 2rem;
+        // }
+        // @media (max-width: 768px) {
+        //   margin-bottom: 31px;
+        //   font-size: 1.5rem;
+        // }
 
         .about__content--accent {
           font-family: "Roboto Slab", serif;
@@ -56,14 +56,14 @@
         font-family: "Roboto", serif;
         font-size: 1.125rem;
         position: relative;
-        @media (max-width: 992px) {
-          font-size: 1rem;
-          line-height: 1.15em;
-          margin: 15px 0 16px 0;
-        }
-        @media (max-width: 768px) {
-          margin: 10px 0 16px 0;
-        }
+        // @media (max-width: 992px) {
+        //   font-size: 1rem;
+        //   line-height: 1.15em;
+        //   margin: 15px 0 16px 0;
+        // }
+        // @media (max-width: 768px) {
+        //   margin: 10px 0 16px 0;
+        // }
 
         &:first-of-type::after {
           position: absolute;
@@ -95,14 +95,103 @@
       max-height: 480px;
       margin-top: 10px;
       margin-left: 107px;
-      @media (max-width: 992px) {
+      // @media (max-width: 992px) {
+      //   margin-left: 42px;
+      // }
+      // @media (max-width: 768px) {
+      //   width: 236px;
+      //   height: 425px;
+      //   margin-left: 21px;
+      //   margin-top: 70px;
+      // }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .about {
+    padding: 80px 0 64px 0;
+    .about__container {
+      .about__content {
+        width: 640px;
+        margin: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+        h2 {
+          margin-bottom: 37px;
+          font-size: 2rem;
+          .about__content--accent {
+          }
+        }
+        p {
+          font-size: 1rem;
+          line-height: 1.15em;
+          margin: 15px 0 16px 0;
+        }
+      }
+    }
+    .about__image {
+      img {
         margin-left: 42px;
       }
-      @media (max-width: 768px) {
-        width: 236px;
-        height: 425px;
-        margin-left: 21px;
-        margin-top: 70px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .about {
+    padding: 60px 0 44px 0;
+    .about__container {
+      .about__content {
+        width: 470px;
+        margin: 0;
+        padding-top: 0;
+        padding-bottom: 0;
+        h2 {
+          margin-bottom: 31px;
+          font-size: 1.5rem;
+          .about__content--accent {
+          }
+          p {
+            margin: 10px 0 16px 0;
+          }
+        }
+      }
+      .about__image {
+        img {
+          width: 236px;
+          height: 425px;
+          margin-left: 21px;
+          margin-top: 70px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .about {
+    padding-bottom: 60px;
+    .about__container {
+      flex-flow: column;
+      .about__content {
+        width: 100%;
+
+        h2 {
+          text-align: center;
+          .about__content--accent {
+            padding: 0 0 0 160px;
+          }
+          p {
+          }
+        }
+      }
+      .about__image {
+        img {
+          margin: 4px 0 0 0;
+          width: 266.55px;
+          height: 480px;
+        }
       }
     }
   }
