--- a/assets/scss/sections/posts/_posts-button.scss
+++ b/assets/scss/sections/posts/_posts-button.scss
@@ -1,23 +1,32 @@
 .posts__button {
-    display: flex;
-    justify-content: center;
-    .btn-accent {
-      min-width: 350px;
-      height: 60px;
-      border: 2px solid $color-primary;
-      font-size: 1.125rem;
-      font-family: "Roboto";
-      letter-spacing: 0.1em;
-      text-align: center;
-      background-color: rgba(45, 54, 81, 0.8);
-      padding: 17px 19px;
-      transition: background-color 0.5s;
-      padding-top: 18px;
-      
-      &:focus,
-      &:hover {
-        background-color: $color-accent;
-      }
+  display: flex;
+  justify-content: center;
+  .btn-accent {
+    min-width: 350px;
+    height: 60px;
+    border: 2px solid $color-primary;
+    font-size: 1.125rem;
+    font-family: "Roboto";
+    letter-spacing: 0.1em;
+    text-align: center;
+    background-color: rgba(45, 54, 81, 0.8);
+    padding: 17px 19px;
+    transition: background-color 0.5s;
+    padding-top: 18px;
+
+    &:focus,
+    &:hover {
+      background-color: $color-accent;
     }
   }
-  
+}
+
+@media (max-width: 576px) {
+  .posts__button {
+    padding:  0 20px;
+    .btn-accent {
+      padding: 18px 20px;
+      width: 100%;
+    }
+  }
+}
