--- a/assets/scss/sections/_section-form.scss
+++ b/assets/scss/sections/_section-form.scss
@@ -2,7 +2,7 @@
   padding: 30px 0;
   background-color: $color-primary;
   @media (max-width: 992px) {
-    padding: 30px 0 30px;
+    //padding: 30px 0 30px;
   }
 
   @media (max-width: 768px) {
@@ -12,14 +12,23 @@
     @extend %container;
     padding-right: 20px;
     padding-left: 20px;
-    flex-wrap: wrap;
+
+    @media (max-width: 768px) {
+      flex-wrap: wrap;
+    }
 
     .form-item {
       display: flex;
-      width: calc(100%/3);
+      // width: calc(100%/3);
+      width: 420px;
+      &:nth-child(2) {
+        margin: 0 20px;
+        @media (max-width: 768px) {
+          margin: 0 20px 0 0;
+        }
+      }
 
       @media (max-width: 992px) {
-        
         // padding: 0 30px 1px 30px;
       }
 
@@ -41,9 +50,7 @@
         border-bottom-color: rgba(255, 255, 255, 0.25);
         background-color: rgba(255, 255, 255, 0.05);
         font-size: 1.125rem;
-        margin-right: 20px;
         @media (max-width: 992px) {
-          margin: 0 20px 0 0;
           padding: 0 30px 1px 30px;
         }
         @media (max-width: 768px) {
@@ -71,21 +78,38 @@
         font-family: "Robota", sans-serif;
         transition: background-color 0.5s, border-color 0.5s;
 
-        @media (max-width: 992px) {
-          width: 303.5px;
-          padding: 0 0 0 2px;
-        }
+        // @media (max-width: 992px) {
+        //   width: 33.33%;
+        //   padding: 0 0 0 2px;
+        // }
 
-        @media (max-width: 768px) {
-          width: 100%;
-          margin: 0 0 0 20px;
-         
-        }
+        // @media (max-width: 768px) {
+        //   width: 100%;
+        //   margin: 0 0 0 20px;
+
+        // }
 
         &:hover {
           background-color: $color-accent;
           border-color: $color-light;
           cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .form {
+    padding-bottom: 30px;
+    .form__container {
+      .form-item {
+        width: 100%;
+        .form-item-input {
+          width: 535px;
+        }
+        .btn-accent {
+         
         }
       }
     }
