--- a/assets/scss/sections/skills/_section-skills.scss
+++ b/assets/scss/sections/skills/_section-skills.scss
@@ -1,5 +1,11 @@
 .skills {
-    padding: 10px 10px 40px;
-    @import "sections/skills/skills-container";
-    @import "sections/skills/skills-button";
+  padding: 10px 10px 40px;
+  @import "sections/skills/skills-container";
+  @import "sections/skills/skills-button";
+}
+
+@media (max-width: 576px) {
+  .skills {
+    padding: 20px;
   }
+}
