--- a/assets/scss/sections/skills/_skills-button.scss
+++ b/assets/scss/sections/skills/_skills-button.scss
@@ -20,3 +20,12 @@
     }
   }
 }
+
+@media (max-width: 576px) {
+  .skills__button{
+    .btn-accent{
+      padding: 18px 20px;
+      width: 100%;
+    }
+  }
+}
