--- a/assets/scss/sections/skills/_skills-container.scss
+++ b/assets/scss/sections/skills/_skills-container.scss
@@ -8,30 +8,6 @@
   grid-auto-rows: calc(33.333vh - 13.333px);
   margin-bottom: 10px;
 
-  @media (max-width: 992px) {
-    & {
-      grid-template-areas:
-        "a1 a1 a2 "
-        "a3 a4 a4 "
-        "a5 a5 a6"
-        "a7 a8 a6"
-        "a7 a9 a9";
-    }
-    @media (max-width: 768px) {
-      & {
-        grid-gap: 10px;
-        grid-template-areas:
-          "a1 a2"
-          "a3 a2"
-          "a4 a4"
-          "a5 a6"
-          "a5 a7"
-          "a8 a9";
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-  }
-
   .skill-item {
     background-color: $color-primary;
     position: relative;
@@ -80,10 +56,10 @@
       font-family: "Roboto", sans-serif;
 
       @media (max-width: 992px) {
-        font-size: 1.25rem
+        font-size: 1.25rem;
       }
       @media (max-width: 768px) {
-        font-size: 1.125rem
+        font-size: 1.125rem;
       }
     }
 
@@ -154,5 +130,77 @@
   grid-area: a9;
   .skill-item__image {
     background-image: url(../img/img-seo.png);
+  }
+}
+
+@media (max-width: 992px) {
+  .skills__container {
+    grid-template-areas:
+      "a1 a1 a2 "
+      "a3 a4 a4 "
+      "a5 a5 a6"
+      "a7 a8 a6"
+      "a7 a9 a9";
+    .skill-item {
+      .skill-item__overlay {
+      }
+      .skill-item__image {
+      }
+      .skill-item__title {
+        .skill-item__link {
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .skills__container {
+    grid-gap: 10px;
+    grid-template-areas:
+      "a1 a2"
+      "a3 a2"
+      "a4 a4"
+      "a5 a6"
+      "a5 a7"
+      "a8 a9";
+    grid-template-columns: 1fr 1fr;
+    .skill-item {
+      .skill-item__overlay {
+      }
+      .skill-item__image {
+      }
+      .skill-item__title {
+        .skill-item__link {
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .skills__container {
+    grid-gap: 20px;
+    grid-template-areas:
+      "a1"
+      "a2"
+      "a3"
+      "a4"
+      "a5"
+      "a6"
+      "a7"
+      "a8"
+      "a9";
+    grid-template-columns: 1fr;
+    .skill-item {
+      .skill-item__overlay {
+      }
+      .skill-item__image {
+      }
+      .skill-item__title {
+        .skill-item__link {
+        }
+      }
+    }
   }
 }
